Add home button to quiz screen and update watermark section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
       <div class="quiz-container">
         <!-- Header -->
         <div class="quiz-header">
+          <button class="btn-home" id="home-btn-quiz" aria-label="Go back to home">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+              <polyline points="9 22 9 12 15 12 15 22"/>
+            </svg>
+            Home
+          </button>
           <div class="score-display">
             <span class="score-label">Score</span>
             <span class="score-value" id="current-score">0</span>
@@ -186,6 +193,11 @@
       </div>
     </section>
 
+  </div>
+
+  <!-- Watermark -->
+  <div class="watermark">
+    Built by <a href="https://x.com/Vorp0x" target="_blank" rel="noopener">Vorp0x</a>
   </div>
 
   <!-- Screen Reader Announcements -->
